Juego terminado - pero falta pulir

--- a/Comienzo de juego/jugando.html
+++ b/Comienzo de juego/jugando.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="jugando.css">
 </head>
 <body>
+    <h1>CHANCHO</h1>
     <div class="container">
         <div class="marcador">
             <input type="text" class="ingresar_nombre_jugador" maxlength="10">
@@ -24,6 +25,23 @@
                 </div>
             </div>
             <button class="boton-volver">Volver</button>
+        </div>
+    </div>
+    <div class="container-modal">
+        <img src="/imagenes/cartas-españolas.png" class="cartas-españolas">
+        <img src="/imagenes/cartas-españolas.png" class="cartas-españolas">
+        <img src="/imagenes/chanchito-esquina.png" class="chanchito-esquina-1">
+        <img src="/imagenes/chanchito-esquina.png" class="chanchito-esquina-2">
+        <div class="modal">
+            <h1>¡Antes de Comenzar!</h1>
+            <form id="envio-de-jugadores">
+                <input type="number" placeholder="Cantidad de jugadores" id="cantidad-jugadores">
+                <p></p>
+                <div class="btn-modal">
+                    <a href="/chancho.html" class="botones-modal">Volver a Inicio</a>
+                    <button type="submit" class="botones-modal" id="btn-jugar">Iniciar Partida</button>
+                </div>
+            </form>
         </div>
     </div>
     <script src="jugando.js"></script>
