--- a/chancho.html
+++ b/chancho.html
@@ -18,8 +18,8 @@
             <a href="#" class="boton">Instrucciones</a>
         </div>
         <div class="container-redes">
-            <a href="https://x.com/santi_pacheco18" class="redes"><img src="imagenes/icons8-twitterx-50.png"></a>
-            <a href="https://www.instagram.com/santi_pacheco21/" class="redes"><img src="imagenes/icono-instagram.png" alt=""></a>
+            <a href="https://x.com/santi_pacheco18" class="redes"><img src="imagenes/icons8-twitterx-50.png" width="46px" height="46px"></a>
+            <a href="https://www.instagram.com/santi_pacheco21/" class="redes"><img src="imagenes/icono-instagram.png"></a>
             <a href="https://github.com/SantiagoPacheco99" class="redes"><img src="imagenes/codicon--github.svg" width="43px" height="44px"></a>
         </div>
     </div>
