--- a/chancho.html
+++ b/chancho.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/imagenes/icono-de-pagina-chanchito.png">
     <link rel="stylesheet" href="chancho.css">
     <title>CHANCHO-Juego-de-Cartas</title>
 </head>
@@ -17,7 +18,8 @@
         <div class="borde-boton">
             <a href="#" class="boton">Instrucciones</a>
         </div>
-        <div class="container-redes">
+        <div class="containerhttp://127.0.0.1:5500/chancho.htmlhttp://127.0.0.1:5500/chancho.htmlvv
+        http://127.0.0.1:5500/chancho.htmlredes">
             <a href="https://x.com/santi_pacheco18" class="redes"><img src="imagenes/icons8-twitterx-50.png" width="46px" height="46px"></a>
             <a href="https://www.instagram.com/santi_pacheco21/" class="redes"><img src="imagenes/icono-instagram.png"></a>
             <a href="https://github.com/SantiagoPacheco99" class="redes"><img src="imagenes/codicon--github.svg" width="43px" height="44px"></a>
