Juego terminado (En funcionalidad)

--- a/Comienzo de juego/jugando.html
+++ b/Comienzo de juego/jugando.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,17 @@
     <title>Chancho</title>
     <link rel="stylesheet" href="jugando.css">
 </head>
+
 <body>
-    <div class="container-titulo">
-        <img src="/imagenes/Marco-del-titulo.png" class="marco-titulo">
-        <h1 class="titulo">CHANCHO</h1>
+    <div class="container-tit-img">
+        <div class="container-titulo">
+            <img src="/imagenes/Marco-del-titulo.png" class="marco-titulo">
+            <h1 class="titulo">CHANCHO</h1>
+        </div>
     </div>
     <div class="container">
         <div class="marcador">
-            <input type="text" class="ingresar_nombre_jugador" maxlength="10">
+            <input type="text" class="ingresar_nombre_jugador">
             <div class="boton_y_palabra">
                 <input type="text" class="casillero-palabra" readonly>
                 <input type="text" class="casillero-palabra" readonly>
@@ -50,4 +54,5 @@
     </div>
     <script src="jugando.js"></script>
 </body>
+
 </html>
