--- a/chancho.html
+++ b/chancho.html
@@ -11,15 +11,15 @@
     <div class="container"> 
         <img src="imagenes/chanchitos-img.jpg" class="img-chanchos">
         <div class="borde-boton">
-            <a href="Comienzo de juego/jugando.html" class="boton">Jugar
-                <img src="imagenes/cartas-removebg-preview.png" class="icono-cartas">
+            <a href="Comienzo de juego/jugando.html" class="boton">
+                <span>Jugar</span>
             </a>
         </div>
         <div class="borde-boton">
-            <a href="#" class="boton">Instrucciones</a>
+            <a href="Instrucciones/Instruccion.html" class="boton"><span>Instrucciones</span></a>
         </div>
         <div class="containerhttp://127.0.0.1:5500/chancho.htmlhttp://127.0.0.1:5500/chancho.htmlvv
-        http://127.0.0.1:5500/chancho.htmlredes">
+        http://ñ127.0.0.1:5500/chancho.htmlredes">
             <a href="https://x.com/santi_pacheco18" class="redes"><img src="imagenes/icons8-twitterx-50.png" width="46px" height="46px"></a>
             <a href="https://www.instagram.com/santi_pacheco21/" class="redes"><img src="imagenes/icono-instagram.png"></a>
             <a href="https://github.com/SantiagoPacheco99" class="redes"><img src="imagenes/codicon--github.svg" width="43px" height="44px"></a>
