Juego (Terminacion de marcadores y agregado de botones)

--- a/Comienzo de juego/jugando.html
+++ b/Comienzo de juego/jugando.html
@@ -35,6 +35,10 @@
             <button class="boton-volver">Volver</button>
         </div>
     </div>
+    <div class="volver-al-inicio">
+        <a id="reiniciar-partida" class="fondo-btn"><img src="/imagenes/mdi-light--refresh.png" class="img-reinicio"></a>
+        <a href="/chancho.html" class="fondo-btn"><img src="/imagenes/icono-casa.png" class="img-casa"></a>
+    </div>
     <div class="container-modal">
         <div class="modal">
             <img src="/imagenes/cartas-españolas.png" class="cartas-españolas">
