--- a/Comienzo de juego/jugando.html
+++ b/Comienzo de juego/jugando.html
@@ -44,6 +44,7 @@
             <img src="/imagenes/cartas-españolas.png" class="cartas-españolas">
             <img src="/imagenes/chanchito-esquina.png" class="chanchito-esquina">
             <h1 class="antes-de-comenzar">¡Antes de Comenzar!</h1>
+            <p class="texto-jugadores">Debe ingresar la cantidad de jugadores</p>
             <form id="envio-de-jugadores">
                 <div class="container-cant-jugadores">
                     <input type="number" placeholder="Cantidad de jugadores" id="cantidad-jugadores">
