--- a/Instrucciones/Instruccion.html
+++ b/Instrucciones/Instruccion.html
@@ -23,7 +23,7 @@
             <div class="container-texto">
                 <h1 class="titulo-instruccion">1 - Ingresar Jugadores</h1>
                 <p>
-                    A la hora de apretar el boton de <b>"Jugar"</b> aparecerá esta pantalla donde se pedira ingresar la cantidad de jugadores que habrá en la partida.
+                    A la hora de apretar el boton de <b>"Jugar"</b> aparecerá la pantalla que está en imagen donde se pedira ingresar la cantidad de jugadores que habrá en la partida.
                     (Disponible para 2 hasta 12 jugadores)
                 </p>
             </div>
@@ -35,8 +35,9 @@
             </div>
             <div class="container-texto">
                 <h1 class="titulo-instruccion">2 - Ingresar el nombre de los jugadores</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, vitae in. Dolores, similique culpa. Minus, voluptatibus! 
-                    Maxime sunt ipsum ea qui architecto consequatur quibusdam adipisci consectetur, fugiat reprehenderit. Consequatur, error.</p>
+                <p>Luego de ingresar la cantidad de jugadores que habrá en la partida, apareceran un marcador para cada jugador, donde en la parte superior
+                    del mismo deberán colocar el nombre de cada jugador
+                </p>
             </div>
         </div>
         <div class="instrucciones impar">
@@ -44,9 +45,10 @@
                 <img src="/imagenes/Instruccion-3.png" class="img-instruccion">
             </div>
             <div class="container-texto">
-                <h1 class="titulo-instruccion">3 - Instruccion</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, vitae in. Dolores, similique culpa. Minus, voluptatibus! 
-                    Maxime sunt ipsum ea qui architecto consequatur quibusdam adipisci consectetur, fugiat reprehenderit. Consequatur, error.</p>
+                <h1 class="titulo-instruccion">3 - Cómo jugar?</h1>
+                <p>En cada mano disputada, el jugador que pierde se le agregará una letra en su marcador, para eso deberá apretar los botones de
+                    la parte derecha que sirven para "agregar" o "quitar" una letra, que formarán la palabra "CHANCHO"
+                </p>
             </div>
         </div>
         <div class="instrucciones par">
@@ -54,9 +56,10 @@
                 <img src="/imagenes/Instruccion-4.png" class="img-instruccion">
             </div>
             <div class="container-texto">
-                <h1 class="titulo-instruccion">4 - Instruccion</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, vitae in. Dolores, similique culpa. Minus, voluptatibus! 
-                    Maxime sunt ipsum ea qui architecto consequatur quibusdam adipisci consectetur, fugiat reprehenderit. Consequatur, error.</p>
+                <h1 class="titulo-instruccion">4 - Cómo termina?</h1>
+                <p>El jugador perderá la partida luego de completar la palabra "CHANCHO" en su maracador, donde sucesivamente se
+                    continuará de esta forma con los demás jugadores hasta que solo quede 1 sin tener la palabra completa
+                </p>
             </div>
         </div>
     </div>
