Chancho beta - cambio

--- a/Comienzo de juego/jugando.html
+++ b/Comienzo de juego/jugando.html
@@ -37,7 +37,7 @@
     </div>
     <div class="volver-al-inicio">
         <a id="reiniciar-partida" class="fondo-btn"><img src="/imagenes/mdi-light--refresh.png" class="img-reinicio"></a>
-        <a href="/chancho.html" class="fondo-btn"><img src="/imagenes/icono-casa.png" class="img-casa"></a>
+        <a href="/index.html" class="fondo-btn"><img src="/imagenes/icono-casa.png" class="img-casa"></a>
     </div>
     <div class="container-modal">
         <div class="modal">
