--- a/Instrucciones/Instruccion.html
+++ b/Instrucciones/Instruccion.html
@@ -65,7 +65,7 @@
     </div>
     <div class="volver-al-inicio">
         <a href="#principio" class="fondo-btn"><img src="/imagenes/icon-park-outline--arrow-up.png" class="img-flecha"></a>
-        <a href="/chancho.html" class="fondo-btn"><img src="/imagenes/icono-casa.png" class="img-flecha" class="img-casa"></a>
+        <a href="/index.html" class="fondo-btn"><img src="/imagenes/icono-casa.png" class="img-flecha" class="img-casa"></a>
     </div>
 </body>
 </html>
