--- a/Comienzo de juego/jugando.html
+++ b/Comienzo de juego/jugando.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/imagenes/icono-de-pagina-chanchito.png">
+    <link rel="icon" href="imagenes/icono-de-pagina-chanchito.png">
     <title>Chancho</title>
     <link rel="stylesheet" href="jugando.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="container-tit-img">
         <div class="container-titulo">
-            <img src="/imagenes/Marco-del-titulo.png" class="marco-titulo">
+            <img src="imagenes/Marco-del-titulo.png" class="marco-titulo">
             <h1 class="titulo">CHANCHO</h1>
         </div>
     </div>
@@ -36,13 +36,13 @@
         </div>
     </div>
     <div class="volver-al-inicio">
-        <a id="reiniciar-partida" class="fondo-btn"><img src="/imagenes/mdi-light--refresh.png" class="img-reinicio"></a>
-        <a href="/index.html" class="fondo-btn"><img src="/imagenes/icono-casa.png" class="img-casa"></a>
+        <a id="reiniciar-partida" class="fondo-btn"><img src="imagenes/mdi-light--refresh.png" class="img-reinicio"></a>
+        <a href="index.html" class="fondo-btn"><img src="imagenes/icono-casa.png" class="img-casa"></a>
     </div>
     <div class="container-modal">
         <div class="modal">
-            <img src="/imagenes/cartas-españolas.png" class="cartas-españolas">
-            <img src="/imagenes/chanchito-esquina.png" class="chanchito-esquina">
+            <img src="imagenes/cartas-españolas.png" class="cartas-españolas">
+            <img src="imagenes/chanchito-esquina.png" class="chanchito-esquina">
             <h1 class="antes-de-comenzar">¡Antes de Comenzar!</h1>
             <p class="texto-jugadores">Debe ingresar la cantidad de jugadores</p>
             <form id="envio-de-jugadores">
