--- a/Instrucciones/Instruccion.html
+++ b/Instrucciones/Instruccion.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/imagenes/icono-de-pagina-chanchito.png">
-    <link rel="stylesheet" href="Instrucciones.css">
+    <link rel="icon" href="../imagenes/icono-de-pagina-chanchito.png">
+    <link rel="stylesheet" href="../Instrucciones.css">
     <title>Instrucciones - Chancho</title>
 </head>
 <body>
     <div class="container" id="principio">
         <div class="container-tit-img">
             <div class="container-titulo">
-                <img src="/imagenes/Marco-del-titulo.png" class="marco-titulo">
+                <img src="../imagenes/Marco-del-titulo.png" class="marco-titulo">
                 <h1 class="titulo">Instrucciones</h1>
             </div>
         </div>
-        <!--Acá comienzan las instrucciones-->
+        <!-- Acá comienzan las instrucciones -->
         <div class="instrucciones impar">
             <div class="container-img">
-                <img src="/imagenes/Tabla-ingresar-jugador.png" class="img-instruccion">
+                <img src="../imagenes/Tabla-ingresar-jugador.png" class="img-instruccion">
             </div>
             <div class="container-texto">
                 <h1 class="titulo-instruccion">1 - Ingresar Jugadores</h1>
                 <p>
-                    A la hora de apretar el boton de <b>"Jugar"</b> aparecerá la pantalla que está en imagen donde se pedira ingresar la cantidad de jugadores que habrá en la partida.
+                    A la hora de apretar el botón de <b>"Jugar"</b> aparecerá la pantalla que está en imagen donde se pedirá ingresar la cantidad de jugadores que habrá en la partida.
                     (Disponible para 2 hasta 12 jugadores)
                 </p>
             </div>
@@ -31,41 +31,41 @@
 
         <div class="instrucciones par">
             <div class="container-img">
-                <img src="/imagenes/Instruccion-2.png" class="img-instruccion">
+                <img src="../imagenes/Instruccion-2.png" class="img-instruccion">
             </div>
             <div class="container-texto">
                 <h1 class="titulo-instruccion">2 - Ingresar el nombre de los jugadores</h1>
-                <p>Luego de ingresar la cantidad de jugadores que habrá en la partida, apareceran un marcador para cada jugador, donde en la parte superior
-                    del mismo deberán colocar el nombre de cada jugador
+                <p>Luego de ingresar la cantidad de jugadores que habrá en la partida, aparecerán un marcador para cada jugador, donde en la parte superior
+                    del mismo deberán colocar el nombre de cada jugador.
                 </p>
             </div>
         </div>
         <div class="instrucciones impar">
             <div class="container-img">
-                <img src="/imagenes/Instruccion-3.png" class="img-instruccion">
+                <img src="../imagenes/Instruccion-3.png" class="img-instruccion">
             </div>
             <div class="container-texto">
                 <h1 class="titulo-instruccion">3 - Cómo jugar?</h1>
-                <p>En cada mano disputada, el jugador que pierde se le agregará una letra en su marcador, para eso deberá apretar los botones de
-                    la parte derecha que sirven para "agregar" o "quitar" una letra, que formarán la palabra "CHANCHO"
+                <p>En cada mano disputada, el jugador que pierde se le agregará una letra en su marcador. Para eso deberá apretar los botones de
+                    la parte derecha que sirven para "agregar" o "quitar" una letra, que formarán la palabra "CHANCHO".
                 </p>
             </div>
         </div>
         <div class="instrucciones par">
             <div class="container-img">
-                <img src="/imagenes/Instruccion-4.png" class="img-instruccion">
+                <img src="../imagenes/Instruccion-4.png" class="img-instruccion">
             </div>
             <div class="container-texto">
                 <h1 class="titulo-instruccion">4 - Cómo termina?</h1>
-                <p>El jugador perderá la partida luego de completar la palabra "CHANCHO" en su maracador, donde sucesivamente se
-                    continuará de esta forma con los demás jugadores hasta que solo quede 1 sin tener la palabra completa
+                <p>El jugador perderá la partida luego de completar la palabra "CHANCHO" en su marcador, donde sucesivamente se
+                    continuará de esta forma con los demás jugadores hasta que solo quede 1 sin tener la palabra completa.
                 </p>
             </div>
         </div>
     </div>
     <div class="volver-al-inicio">
-        <a href="#principio" class="fondo-btn"><img src="/imagenes/icon-park-outline--arrow-up.png" class="img-flecha"></a>
-        <a href="/index.html" class="fondo-btn"><img src="/imagenes/icono-casa.png" class="img-flecha" class="img-casa"></a>
+        <a href="#principio" class="fondo-btn"><img src="../imagenes/icon-park-outline--arrow-up.png" class="img-flecha"></a>
+        <a href="../index.html" class="fondo-btn"><img src="../imagenes/icono-casa.png" class="img-flecha img-casa"></a>
     </div>
 </body>
 </html>
