--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="imagenes/icono-de-pagina-chanchito.png">
-    <link rel="stylesheet" href="chancho.css">
+    <link rel="stylesheet" href="Comienzo de juego/chancho.css">
     <title>CHANCHO-Juego-de-Cartas</title>
 </head>
 <body>
