--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="imagenes/icono-de-pagina-chanchito.png">
-    <link rel="stylesheet" href="Comienzo de juego/chancho.css">
+    <link rel="stylesheet" href="/Comienzo de juego/chancho.css">
     <title>CHANCHO-Juego-de-Cartas</title>
 </head>
 <body>
     <div class="container"> 
-        <img src="imagenes/chanchitos-img.jpg" class="img-chanchos">
+        <img src="/imagenes/chanchitos-img.jpg" class="img-chanchos">
         <div class="borde-boton">
             <a href="Comienzo de juego/jugando.html" class="boton">
                 <span>Jugar</span>
