--- a/Instrucciones/Instruccion.html
+++ b/Instrucciones/Instruccion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/imagenes/icono-de-pagina-chanchito.png">
-    <link rel="stylesheet" href="Instrucciones.css">
+    <link rel="stylesheet" href="instrucciones.css">
     <title>Instrucciones - Chancho</title>
 </head>
 <body>
