--- a/Instrucciones/Instruccion.html
+++ b/Instrucciones/Instruccion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/imagenes/icono-de-pagina-chanchito.png">
+    <link rel="icon" href="../imagenes/icono-de-pagina-chanchito.png">
     <link rel="stylesheet" href="instrucciones.css">
     <title>Instrucciones - Chancho</title>
 </head>
@@ -11,14 +11,14 @@
     <div class="container" id="principio">
         <div class="container-tit-img">
             <div class="container-titulo">
-                <img src="/imagenes/Marco-del-titulo.png" class="marco-titulo">
+                <img src="../imagenes/Marco-del-titulo.png" class="marco-titulo">
                 <h1 class="titulo">Instrucciones</h1>
             </div>
         </div>
         <!-- Acá comienzan las instrucciones -->
         <div class="instrucciones impar">
             <div class="container-img">
-                <img src="/imagenes/Tabla-ingresar-jugador.png" class="img-instruccion">
+                <img src="../imagenes/Tabla-ingresar-jugador.png" class="img-instruccion">
             </div>
             <div class="container-texto">
                 <h1 class="titulo-instruccion">1 - Ingresar Jugadores</h1>
@@ -31,7 +31,7 @@
 
         <div class="instrucciones par">
             <div class="container-img">
-                <img src="/imagenes/Instruccion-2.png" class="img-instruccion">
+                <img src="../imagenes/Instruccion-2.png" class="img-instruccion">
             </div>
             <div class="container-texto">
                 <h1 class="titulo-instruccion">2 - Ingresar el nombre de los jugadores</h1>
@@ -42,7 +42,7 @@
         </div>
         <div class="instrucciones impar">
             <div class="container-img">
-                <img src="/imagenes/Instruccion-3.png" class="img-instruccion">
+                <img src="../imagenes/Instruccion-3.png" class="img-instruccion">
             </div>
             <div class="container-texto">
                 <h1 class="titulo-instruccion">3 - Cómo jugar?</h1>
@@ -53,7 +53,7 @@
         </div>
         <div class="instrucciones par">
             <div class="container-img">
-                <img src="/imagenes/Instruccion-4.png" class="img-instruccion">
+                <img src="../imagenes/Instruccion-4.png" class="img-instruccion">
             </div>
             <div class="container-texto">
                 <h1 class="titulo-instruccion">4 - Cómo termina?</h1>
