--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="imagenes/icono-de-pagina-chanchito.png">
-    <link rel="stylesheet" href="/Comienzo de juego/chancho.css">
+    <link rel="stylesheet" href="Comienzo_de_juego/chancho.css">
     <title>CHANCHO-Juego-de-Cartas</title>
 </head>
 <body>
     <div class="container"> 
         <img src="/imagenes/chanchitos-img.jpg" class="img-chanchos">
         <div class="borde-boton">
-            <a href="Comienzo de juego/jugando.html" class="boton">
+            <a href="Comienzo_de_juego/jugando.html" class="boton">
                 <span>Jugar</span>
             </a>
         </div>
         <div class="borde-boton">
-            <a href="Instrucciones/Instruccion.html" class="boton"><span>Instrucciones</span></a>
+            <a href="Instrucciones/instruccion.html" class="boton"><span>Instrucciones</span></a>
         </div>
         <div>
             <a href="https://x.com/santi_pacheco18" class="redes"><img src="imagenes/icons8-twitterx-50.png" width="46px" height="46px"></a>
