Cambio-ahora-si

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container"> 
-        <img src="/imagenes/chanchitos-img.jpg" class="img-chanchos">
+        <img src="imagenes/chanchitos-img.jpg" class="img-chanchos">
         <div class="borde-boton">
             <a href="Comienzo_de_juego/jugando.html" class="boton">
                 <span>Jugar</span>
