localStorage correctamente funcionando

--- a/Comienzo_de_juego/jugando.html
+++ b/Comienzo_de_juego/jugando.html
@@ -43,7 +43,7 @@
 
     <dialog id="modal_reiniciar">
         <div class="container-contenido-modal reiniciar">
-            <h2>¿Quieres reinicar la partida?</h2>
+            <h2>¿Quieres reinicar la partida?🤔</h2>
             <h4 class="texto-jugadores">¡Cuidado!, Si reinicias la pardida los puntos de los jugadores se perderán</h4>
             <div class="btn-modal">
                 <button type="submit" class="botones-modal" id="reiniciar">Reiniciar partida</button>
@@ -54,10 +54,10 @@
 
     <dialog id="volverAlInicio">
         <div class="container-contenido-modal volver_inicio">
-            <h2>¿Quieres volver al inicio?</h2>
+            <h2>¿Quieres volver al inicio?🤔</h2>
             <h4 class="texto-jugadores">¡Cuidad!, Si regresas al inicio se perderá el estado de la partida actual</h4>
             <div class="btn-modal">
-                <a href="../index.html" class="botones-modal" id="btn-jugar">Regresar al inicio</a>
+                <a href="../index.html" class="botones-modal" id="btn_volver">Volver al inicio</a>
                 <button type="button" class="botones-modal" id="cerrarModalVolverInicio">Cerrar</button>
             </div>
         </div>
