--- a/Comienzo_de_juego/jugando.html
+++ b/Comienzo_de_juego/jugando.html
@@ -44,7 +44,7 @@
     <dialog id="modal_reiniciar">
         <div class="container-contenido-modal reiniciar">
             <h2>¿Quieres reinicar la partida?🤔</h2>
-            <h4 class="texto-jugadores">¡Cuidado!, Si reinicias la pardida los puntos de los jugadores se perderán</h4>
+            <h4 class="texto-jugadores">¡Cuidado! Si reinicias la pardida los puntos de los jugadores se perderán</h4>
             <div class="btn-modal">
                 <button type="submit" class="botones-modal" id="reiniciar">Reiniciar partida</button>
                 <button type="button" class="botones-modal" id="cerrarModalReiniciar">Cerrar</button>
@@ -55,13 +55,25 @@
     <dialog id="volverAlInicio">
         <div class="container-contenido-modal volver_inicio">
             <h2>¿Quieres volver al inicio?🤔</h2>
-            <h4 class="texto-jugadores">¡Cuidad!, Si regresas al inicio se perderá el estado de la partida actual</h4>
+            <h4 class="texto-jugadores">¡Cuidado! Si regresas al inicio se perderá el estado de la partida actual</h4>
             <div class="btn-modal">
                 <a href="../index.html" class="botones-modal" id="btn_volver">Volver al inicio</a>
                 <button type="button" class="botones-modal" id="cerrarModalVolverInicio">Cerrar</button>
             </div>
         </div>
     </dialog>
+
+    <dialog id="modal_jugador_ganador">
+        <div class="container-contenido-modal jugador_ganador">
+            <img src="/imagenes/Chanchito_campeon.jpg" class="imagen_chanchito_campeon">
+            <h2 id="titulo_ganador"></h2>
+            <div class="btn-modal">
+                <button type="submit" class="botones-modal" id="btn_volver_a_jugar">Volver a jugar</button>
+                <a href="../index.html" class="botones-modal" id="btn_volver_al_inicio">Volver al inicio</a>
+            </div>
+        </div>
+    </dialog>
+
     <script type="module" src="jugando.js" defer></script>
 </body>
 
