--- a/Comienzo_de_juego/jugando.html
+++ b/Comienzo_de_juego/jugando.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container-tit-img">
         <div class="container-titulo">
-            <img src="../imagenes/Marco-del-titulo.png" class="marco-titulo">
+            <img src="/imagenes/Marco-del-titulo.png" class="marco-titulo">
             <h1 class="titulo">CHANCHO</h1>
         </div>
     </div>
@@ -66,7 +66,7 @@
     <dialog id="modal_jugador_ganador">
         <div class="container-contenido-modal jugador_ganador">
             <div class="marco-chancho-ganador">
-                <img src="/imagenes/Chanchito_campeon.jpg" class="imagen_chanchito_campeon">
+                <img src="../imagenes/Chanchito_campeon.jpg" class="imagen_chanchito_campeon">
             </div>
             <h2 id="titulo_ganador"></h2>
             <div class="btn-modal">
@@ -77,7 +77,7 @@
     </dialog>
 
     <canvas id="confetti-canvas" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 99999;"></canvas>
-    <script type="module" src="jugando.js" defer></script>
+    <script type="module" src="Comienzo_de_juego/jugando.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
     
 
